--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,14 @@ path = "leetcode/studyplan_algorithm1/two_pointers/rotate_array/main.rs"
 name = "move_zeroes"
 path = "leetcode/studyplan_algorithm1/two_pointers/move_zeroes/main.rs"
 
+[[bin]]
+name = "two_sum_ii"
+path = "leetcode/studyplan_algorithm1/two_pointers/two_sum_ii/main.rs"
+
+[[bin]]
+name = "reverse_string"
+path = "leetcode/studyplan_algorithm1/two_pointers/reverse_string/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
