finished remove_nth_node with C

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,14 @@ path = "leetcode/studyplan_algorithm1/two_pointers/reverse_string/main.rs"
 name = "reverse_words_in_a_string_iii"
 path = "leetcode/studyplan_algorithm1/two_pointers/reverse_words_in_a_string_iii/main.rs"
 
+[[bin]]
+name = "middle_of_the_linked_list"
+path = "leetcode/studyplan_algorithm1/two_pointers/middle_of_the_linked_list/main.rs"
+
+[[bin]]
+name = "remove_nth_node_from_end_of_list"
+path = "leetcode/studyplan_algorithm1/two_pointers/remove_nth_node_from_end_of_list/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
