--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,9 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    // {
-    //   "type": "lldb",
-    //   "request": "launch",
-    //   "name": "Debug",
-    //   "program": "${workspaceFolder}/<your program>",
-    //   "args": [],
-    //   "cwd": "${workspaceFolder}"
-    // },
     {
       "name": "g++ build and debug active file",
-      "type": "cppdbg",
+      "type": "lldb",
       "request": "launch",
       "program": "${fileDirname}/${fileBasenameNoExtension}",
       "args": [],
@@ -22,16 +14,15 @@
       "cwd": "${workspaceFolder}",
       "environment": [],
       "externalConsole": false,
-      "MIMode": "gdb",
       "setupCommands": [
         {
-          "description": "Enable pretty-printing for gdb",
+          "description": "Enable pretty-printing for lldb",
           "text": "-enable-pretty-printing",
           "ignoreFailures": true
         }
       ],
-      "preLaunchTask": "C/C++: g++ build active file",
-      "miDebuggerPath": "/usr/bin/gdb"
+      "preLaunchTask": "C/C++: g++-11 build active file",
+      "miDebuggerPath": "/opt/homebrew/opt/llvm/bin/lldb"
     }
   ]
 }
