--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,14 +2,17 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: g++ build active file",
-            "command": "/usr/bin/g++",
+            "label": "C/C++: g++-11 build active file",
+            "command": "/opt/homebrew/bin/g++-11",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
+                "${workspaceFolder}/utils/display.cpp",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/${fileBasenameNoExtension}",
+                "-I",
+                "${workspaceFolder}"
             ],
             "options": {
                 "cwd": "${fileDirname}"
