added solution for kids_with_greatest_number_of_candy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,7 @@
     "source_location": "cpp",
     "ranges": "cpp",
     "stop_token": "cpp",
-    "syncstream": "cpp"
+    "syncstream": "cpp",
+    "filesystem": "cpp"
   }
 }
