--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ version = "0.1.0"
 
 [workspace]
 members = [
-    "aoc"
+  "aoc2021",
+  "aoc2022"
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
