--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ version = "0.1.0"
 [workspace]
 members = [
   "aoc2021",
-  "aoc2022"
+  "aoc2022",
+  "codeforces/goodbye_2022"
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
