feat: added solution for some questions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,7 @@
     "ranges": "cpp",
     "stop_token": "cpp",
     "syncstream": "cpp",
-    "filesystem": "cpp"
+    "filesystem": "cpp",
+    "__verbose_abort": "cpp"
   }
 }
